Corrected body default font size, was missing a % sign behind the 100. Keep an eye on effects this might have, but I think that was default across all browsers anyway.

--- a/webcit/static/styles/webcit.css
+++ b/webcit/static/styles/webcit.css
@@ -20,7 +20,7 @@
 }
 
 html, body {
-	font-size: 100;
+	font-size: 100%;
 	height:100%;
 	width:100%;
 	margin:0;
